--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <!-- マーカーの.pattファイルを読み込む -->
       <a-marker type="pattern" url="pattern-QR_742533.patt">
         <!-- 3Dモデルを呼び出す -->
-        <a-entity gltf-model="#roadSign"></a-entity>
+        <a-obj-model src="roadSign.gltf">
+            <a-entity gltf-model="#roadSign"></a-entity>
+        </a-obj-model>
       </a-marker>
 
       <!-- カメラを追加 -->
