--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title></title>
   </head>
   <body style="margin: 0; overflow: hidden">
-    <a-scene embedded arjs vr-mode-ui="enabled: false;">
+    <a-scene embedded arjs vr-mode-ui="enabled: true;">
 	    
       <!-- 3DCGモデルを読み込む -->
       <a-assets>
