--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <!-- マーカーの.pattファイルを読み込む -->
       <a-marker type="pattern" url="pattern-QR_742533.patt">
         <!-- 3Dモデルを呼び出す -->
-      <!--  <a-entity gltf-model="#roadSign"></a-entity> -->
+      <a-entity gltf-model="#roadSign"></a-entity>
         <a-obj-model
           src="#roadSign"
           scale="0.5 0.5 0.5"
