--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a-marker type="pattern" url="pattern-QR_742533.patt">
         <!-- 3Dモデルを呼び出す -->
         <a-entity gltf-model="#roadSign">
-          <a-obj-model
+          <a-gltf-model
             src="#roadSign"
             scale="0.5 0.5 0.5"
             position="0 0.5 0">
@@ -33,7 +33,7 @@
               easing="linear"
               repeat="indefinite">
             </a-animation>
-          </a-obj-model>
+          </a-gltf-model>
       </a-entity>
     </a-marker>
 
