--- a/index.html
+++ b/index.html
@@ -5,40 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- A-Frame を読み込む -->
-    <script src="https://aframe.io/releases/0.6.0/aframe.min.js"></script>
+    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
     <!-- AR.js を読み込む -->
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
+    <!-- aframe-extrasの読み込み(glTFのアニメーション再生のため) -->
+    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
     <title></title>
   </head>
   <body style='margin : 0px; overflow: hidden;'>
-    <a-scene embedded arjs='sourceType: webcam;'>
-	    
-      <!-- 3DCGモデルを読み込む -->
-      <a-assets>
-        <a-asset-item id="roadSign" src="roadSign.gltf"></a-asset-item>
-      </a-assets>
+    <!-- A-Frameのコードここから -->
+    <a-scene embedded arjs="debugUIEnabled: false;" renderer="gammaOutput: true;" vr-mode-ui="enabled:false" >
 
-      <!-- マーカーの.pattファイルを読み込む -->
-      <a-marker type="pattern" url="pattern-QR_742533.patt">
-        <!-- 3Dモデルを呼び出す -->
-        <a-entity gltf-model="#roadSign">
-          <a-gltf-model
-            src="#roadSign"
-            scale="0.5 0.5 0.5"
-            position="0 0.5 0">
-            <a-animation
-              attribute="rotation"
-              to="0 360 0"
-              dur="3000"
-              easing="linear"
-              repeat="indefinite">
-            </a-animation>
-          </a-gltf-model>
+     <!-- オブジェクトの読み込みここから -->
+    <a-assets>
+        <a-asset-item id="model" src="roadSign.gltf"></a-asset-item>
+    </a-assets>
+  <!-- オブジェクトの読み込みここまで -->
+  
+  <!-- ライトの設定ここから -->
+    <a-light type="directional" color="#FFF" intensity="0.5" position="-1 1 2"></a-light>
+    <a-light type="ambient" color="#FFF"></a-light>
+  <!-- ライトの設定ここまで -->
+  
+  <!-- マーカーの上に表示させるモデルの設定ここから -->
+    <a-marker preset="custom" type="pattern" url="pattern-QR_742533.patt">
+      <a-entity gltf-model="#model" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0" animation-mixer>
+        <a-animation  attribute="rotation" to="0 360 0" dur="7000" repeat="indefinite" easing="linear"></a-animation>
       </a-entity>
     </a-marker>
-
-      <!-- カメラを追加 -->
-      <a-entity camera></a-entity>
+  <!-- マーカーの上に表示させるモデルの設定ここまで -->
+  
+  <!-- カメラの設定ここから -->
+    <a-entity camera></a-entity>
+  <!-- カメラの設定ここまで -->
+  
     </a-scene>
+  <!-- A-Frameのコードここまで -->
   </body>
 </html>
