--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
      <!-- オブジェクトの読み込みここから -->
     <a-assets>
-        <a-asset-item id="model" src="model.gltf"></a-asset-item>
+        <a-asset-item id="model" src="roadSign.gltf"></a-asset-item>
     </a-assets>
   <!-- オブジェクトの読み込みここまで -->
   
@@ -29,7 +29,7 @@
   
   <!-- マーカーの上に表示させるモデルの設定ここから -->
     <a-marker preset="custom" type="pattern" url="pattern-QR_742533.patt">
-      <a-entity gltf-model="#model" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0" animation-mixer>
+      <a-entity gltf-model="#model" position="0 0 0" scale="1 1 1" rotation="0 0 0" animation-mixer>
       <a-animation  attribute="rotation" to="0 360 0" dur="7000" repeat="indefinite" easing="linear"></a-animation>
       </a-entity>
     </a-marker>
