--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
      <!-- オブジェクトの読み込みここから -->
     <a-assets>
-        <a-asset-item id="model" src="roadSign.gltf"></a-asset-item>
+        <a-asset-item id="model" src="newContainer.gltf"></a-asset-item>
     </a-assets>
   <!-- オブジェクトの読み込みここまで -->
   
