--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
      <!-- オブジェクトの読み込みここから -->
     <a-assets>
-        <a-asset-item id="model" src="newContainer.gltf"></a-asset-item>
+        <a-asset-item id="model" src="rotate_sample.gltf"></a-asset-item>
     </a-assets>
   <!-- オブジェクトの読み込みここまで -->
   
@@ -28,7 +28,7 @@
   <!-- ライトの設定ここまで -->
   
   <!-- マーカーの上に表示させるモデルの設定ここから -->
-    <a-marker preset="custom" type="pattern" url="pattern-QR_742533.patt">
+    <a-marker preset="custom" type="pattern" url="pattern-QR_742533.png">
       <a-entity gltf-model="#model" position="0 0 0" scale="0.05 0.05 0.05" rotation="0 0 0" animation-mixer>
       <a-animation  attribute="rotation" to="0 360 0" dur="7000" repeat="indefinite" easing="linear"></a-animation>
       </a-entity>
