--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
      <!-- オブジェクトの読み込みここから -->
     <a-assets>
-        <a-asset-item id="model" src="rotate_sample.gltf"></a-asset-item>
+        <a-asset-item id="model" src="Rotate.glb"></a-asset-item>
     </a-assets>
   <!-- オブジェクトの読み込みここまで -->
   
