--- a/index.html
+++ b/index.html
@@ -1,45 +1,22 @@
 <!DOCTYPE html>
 <html lang="ja">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- A-Frame を読み込む -->
-    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-    <!-- AR.js を読み込む -->
-    <script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
-    <!-- aframe-extrasの読み込み(glTFのアニメーション再生のため) -->
-    <script src="https://cdn.rawgit.com/donmccurdy/aframe-extras/v5.0.0/dist/aframe-extras.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.1/dist/aframe-extras.min.js"></script>
-    <title></title>
-  </head>
-  <body style='margin : 0px; overflow: hidden;'>
-    <!-- A-Frameのコードここから -->
-    <a-scene embedded arjs="debugUIEnabled: false;" renderer="gammaOutput: true;" vr-mode-ui="enabled:false" >
-
-     <!-- オブジェクトの読み込みここから -->
-    <a-assets>
-        <a-asset-item id="model" src="Rotate.glb"></a-asset-item>
-    </a-assets>
-  <!-- オブジェクトの読み込みここまで -->
-  
-  <!-- ライトの設定ここから -->
-    <a-light type="directional" color="#FFF" intensity="0.5" position="-1 1 2"></a-light>
-    <a-light type="ambient" color="#FFF"></a-light>
-  <!-- ライトの設定ここまで -->
-  
-  <!-- マーカーの上に表示させるモデルの設定ここから -->
-    <a-marker preset="custom" type="pattern" url="pattern-QR_742533.png">
-      <a-entity gltf-model="#model" position="0 0 0" scale="1 1 1" rotation="0 0 0" animation-mixer>
-      </a-entity>
-    </a-marker>
-  <!-- マーカーの上に表示させるモデルの設定ここまで -->
-  
-  <!-- カメラの設定ここから -->
-    <a-entity camera></a-entity>
-  <!-- カメラの設定ここまで -->
-  
-    </a-scene>
-  <!-- A-Frameのコードここまで -->
-  </body>
+<head>
+<meta charset="UTF-8">
+<title>model-viewerデモ</title>
+<script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
+</head>
+<body>
+<div style="width:90%; margin:0 auto; height:80vh;">
+<model-viewer
+alt="hanachan"
+src="Rotate.glb"
+style="width:80%;height:80%;"                  
+background-color="transparent"
+shadow-intensity="0.7"
+camera-controls
+autoplay
+auto-rotate ar>
+</model-viewer>
+</div>
+</body>
 </html>
