--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ camera-controls
 autoplay
 auto-rotate ar>
 </model-viewer>
+<a href="https://beira-shop.com/products/detail/23">注文する</a>
 </div>
 </body>
 </html>
