--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>model-viewerデモ</title>
 <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.js"></script>
 </head>
-<body style="background-color: transparent;">
+<body>
 <div style="width:90%; margin:0 auto; height:80vh;">
 <model-viewer
 alt="hanachan"
