--- a/index.html
+++ b/index.html
@@ -18,6 +18,6 @@ autoplay
 auto-rotate ar>
 </model-viewer>
 </div>
-<a href="https://beira-shop.com/products/detail/23">注文する</a>
+<a style="color: #000;" href="https://beira-shop.com/products/detail/23">注文する</a>
 </body>
 </html>
